--- a/resources/sass/_likes.scss
+++ b/resources/sass/_likes.scss
@@ -9,25 +9,35 @@
 }
 .blokken{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
   margin-top: 7em;
+  gap: 1em;
+
   article{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     background-color: hotpink;
     width: 40%;
     aspect-ratio: 1 / 1;
     margin: 1em;
-    justify-content: flex-end;
-    align-items: center;
-    display: flex;
+
+    a{
+      width: 100%;
+      height: 100%;
+    }
+
     h2{
-      font-size: 1em;
+      font-size: .875em;
       position: absolute;
       background-color: $primary-color;
-      width: 40%;
+      padding: 5px 0;
+      width: 100%;
       text-align: center;
-      margin-bottom: 1em;
+      bottom: 0;
     }
     img{
       width: 100%;
