--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,7 @@
     </main>
     {{> nav }}
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+<script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
     <script src="/public/js/chat.js"></script>
     <script src="/public/js/app.js"></script>
     <script src="/public/js/account.js"></script>
