--- a/views/profile/likes.hbs
+++ b/views/profile/likes.hbs
@@ -6,7 +6,7 @@
 	{{#each likes}}
 		
 		<article>
-			<a href="/restaurants/{{ slug }}">
+			<a href="/restaurants/{{ restaurant.slug }}">
 				<img src="{{ restaurant.images.bg.src }}" alt="{{ restaurant.images.bg.alt }}"> 
 				<h2>{{ restaurant.name }}</h2>
 			</a>
