--- a/views/profile/account.hbs
+++ b/views/profile/account.hbs
@@ -1,6 +1,7 @@
 {{> head }}
     {{> header }}
         {{{body}}}
+<body id="accountbody">
 <section id="accountheader">
     <article>
         <h1>Profile</h1>
@@ -113,4 +114,5 @@
 
 </section>
 {{> nav }}
+</body>
 <script src="/public/js/account.js"></script>
