--- a/resources/sass/_account.scss
+++ b/resources/sass/_account.scss
@@ -88,7 +88,6 @@
     align-items: center;
     text-align: left;
     transition: .25s ease;
-
     #titel{
         margin-left: 1em;
         font-size: 2em;
@@ -271,3 +270,6 @@
       }
   }
 
+#accountbody{
+    overflow-x: hidden;
+}
