add, edit & delete cards

--- a/resources/sass/_account.scss
+++ b/resources/sass/_account.scss
@@ -248,6 +248,7 @@
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
+    background-color: red;
     article{
       background-color: hotpink;
       width: 40%;
