--- a/views/profile/newrestaurant.hbs
+++ b/views/profile/newrestaurant.hbs
@@ -8,7 +8,7 @@
 </section>
 
 <section>
-    <form action="/account/favorite" method="post" id="favoriteform"> {{!moet nog stylen}}
+    <form action="/account/newFavorite" method="post" id="favoriteform"> {{!moet nog stylen}}
 
                 <label for="restaurant">Restaurant naam</label>
                 <input type="text" name="restaurant" required>
