--- a/views/profile/account.hbs
+++ b/views/profile/account.hbs
@@ -28,23 +28,25 @@
     <ul>
         {{#each card}}
         <li>
-            <article>
+            <a href="/account/editFavorite/{{ _id }}"><article>
                 <img src="" alt=""> {{!afbeelding van restaurant}}
-                <h3>{{this.restaurant}}</h3>
+                <h2>{{this.restaurant}}</h2>
                 <section>
-                    <h4>Reccomendations</h4>
+                    <h3>Reccomendations</h3>
 
                     <img src="" alt=""> {{!afbeelding van gerecht}}
                     <p>{{this.reccomendation1}}</p>
                     <img src="" alt=""> {{!afbeelding van gerecht}}
                     <p>{{this.reccomendation2}}</p>
                 </section>
-            </article>
+            </article></a>
         </li>
+        {{ else }}
+        <p>Je hebt momenteel geen favorite restaurants... Klik op 'plus' om er een toe te voegen</p>
         {{/each}}
     </ul>
 
-    <a href="account/favorite">+</a> {{!moet nog stylen}}
+    <a href="account/newFavorite">+</a> {{!moet nog stylen}}
 </section>
 
 <section id="hover">
