--- a/views/profile/editrestaurant.hbs
+++ b/views/profile/editrestaurant.hbs
@@ -8,7 +8,7 @@
 </section>
 
 <section>
-    <form action="/account/editFavorite/{{ card._id }}" method="post" id="favoriteform"> {{!moet nog stylen}}
+    <form action="/account/editFavorite/{{ card._id }}" method="post" class="favoriteform"> {{!moet nog stylen}}
 
                 <label for="restaurant">Restaurant naam</label>
                 <input type="text" name="restaurant" required value="{{card.restaurant}}">
