--- a/views/profile/newrestaurant.hbs
+++ b/views/profile/newrestaurant.hbs
@@ -8,16 +8,13 @@
 </section>
 
 <section>
-    <form action="/account/newFavorite" method="post" id="favoriteform"> {{!moet nog stylen}}
+    <form action="/account/newFavorite" method="post" class="favoriteform"> {{!moet nog stylen}}
 
                 <label for="restaurant">Restaurant naam</label>
                 <input type="text" name="restaurant" required>
 
-                <h2>My Reccomendations</h2>
-                <label for="item">...</label>
+                <label for="reccomendation">My Reccomendations</label>
                 <input type="text" name="reccomend1" required>
-
-                <label for="item">...</label>
                 <input type="text" name="reccomend2" required>
             
             <input type="submit" value="Save changes">
