--- a/resources/sass/_account.scss
+++ b/resources/sass/_account.scss
@@ -245,30 +245,62 @@
 .blokkenaccount{
     display: flex;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
-    background-color: red;
     article{
-        background-color: hotpink;
-        width: 40%;
-        aspect-ratio: 1 / 1;
+        height: 18em;
         margin: 1em;
-        justify-content: flex-end;
-        align-items: center;
         display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        background-color: $grey-color;
+        border-radius: 1em;
         h2{
-          font-size: 1em;
-          position: absolute;
-          background-color: $primary-color;
-          width: 40%;
-          text-align: center;
-          margin-bottom: 1em;
+          font-size: 1.5em;
+          width: 59%;
+          text-align: left;
+          margin: 1em 0em 1em 0em;
+          text-decoration: none;
         }
         img{
-          width: 100%;
+          width: 30%;
           height: auto;
+          margin: 1em 0em 0em 1em;
+        }
+        section{
+            width: 1000%;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            justify-content: space-around;
+            h3{
+                width: 100%;
+                margin-left: 1em;
+                text-decoration: none;
+            }
+            span{
+                width: 30%;
+            }
+            img{
+                margin: 0;
+                width: 100%;
+                filter: blur(5px);
+            }
+            p{
+                position: relative;
+                text-align: center;
+                bottom: 3.5em;
+                text-decoration: none;
+            }
         }
       }
+  }
+  .addbtn{
+      text-align: center;
+      font-size: 5em;
+      color: gray;
+      font-weight: bold;
+      text-decoration: none;
   }
 
 #accountbody{
